--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "files.associations": {
-        "lighting.h": "c",
-        "stdio.h": "c",
+        "status.h": "c",
         "temperature_sensor.h": "c"
     }
 }
